# loan-prediction

./: README.md  loan-approval (1).ipynb  loan-approval (2).ipynb  loan-approval.ipynb  pyproject.toml
