[tool.poetry]
name = "loan-prediction"
version = "0.1.0"
description = "Project for CS F415 Data Mining"
authors = ["Alok Desai <alokdesai2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
